thesis writing and some modifications to the code

--- a/doc/thesis.bib
+++ b/doc/thesis.bib
@@ -15,3 +15,18 @@
  address = {New York, NY, USA},
  keywords = {free-form surfaces, sketch-based interfaces/modeling},
 } 
+
+@article {CGF:CGF1129,
+author = {Schmidt, Ryan and Singh, Karan},
+title = {Sketch-Based Procedural Surface Modeling and Compositing Using Surface Trees},
+journal = {Computer Graphics Forum},
+volume = {27},
+number = {2},
+publisher = {Blackwell Publishing Ltd},
+issn = {1467-8659},
+url = {http://dx.doi.org/10.1111/j.1467-8659.2008.01129.x},
+doi = {10.1111/j.1467-8659.2008.01129.x},
+pages = {321--330},
+keywords = {I.3.5 [Computer Graphics], Computational Geometry and Object Modeling},
+year = {2008},
+}
